Closed Bug 1316481 Opened 8 years ago Closed 8 years ago

Fix WinCompositorWidget accessing gfxPlatform

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

WinCompositorWidget accesses gfxPlatform for a method that looks like it can be static. Discovered by searching for top gpu process crashes, most of which look driver related.
Attached patch patchSplinter Review
Attachment #8809250 - Flags: review?(matt.woodrow)
Attachment #8809250 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bf2c61e0283e
Don't access gfxPlatform from WinCompositorWidget. (bug 1316481, r=mattwoodrow)
https://hg.mozilla.org/mozilla-central/rev/bf2c61e0283e
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: