Don't access gfxPlatform from WinCompositorWidget. (bug 1316481, r=mattwoodrow)